Feat: create Interfaces

--- a/CDA-Ruedas-Felices.csproj
+++ b/CDA-Ruedas-Felices.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>CDA_Ruedas_Felices</RootNamespace>
+    <RootNamespace>RuedasFelices</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
