modified:   axample.env 	modified:   services/EmailSender.cs

--- a/axample.env
+++ b/axample.env
@@ -1,12 +1,5 @@
-
-# ===========================
-# SMTP Configuration
-# ===========================
-
-SMTP_HOST=skycare.contact@gmail.com
+SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=skycare.contact@gmail.com
-SMTP_PASS=Skycare123.
-
-# Optional
+SMTP_PASS=Skycare123
 APP_NAME=CDA Ruedas Felices
